# pca_with_pacing_28_Dec

./: .bandit  .cursorrules  .dockerignore  .env.complete.example  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  ALL_SOURCES_ORDERED.txt  ARCHITECTURE_DEPLOYMENT.md  AUTHENTICATION_FIXED.md  AUTOMATED_REPORTING_GUIDE.md  CAUSAL_ANALYSIS_RAG_INTEGRATION.md  DATABASE_SETUP.md  DATA_IMPORT_ENHANCEMENTS.md  DEBUGGING_VIZ2.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_SETUP.md  DOCUMENTATION.docx  DOCUMENTATION.md  DUCKDB_AUTHENTICATION.md  Dockerfile  ENTERPRISE_AUDIT.md  FEATURES.md  INTELLIGENCE_ENHANCEMENTS_SUMMARY.md  IN_DEPTH_ANALYSIS_IMPROVEMENTS.md  KNOWLEDGE_BASE_SETUP.md  LOGIN_INSTRUCTIONS.md  PCA_AutoStart.command  PROJECT_STATUS.md  QUICK_START_YOUR_TEMPLATE.md  RAG_IMPROVEMENTS.md  RAG_INTELLIGENCE_ROADMAP.md  README.md  REGRESSION_PREVENTION.md  REPORTING_FLOW_DIAGRAM.md  REPORTING_MODULE_GUIDE.md  SERVER_STATUS.md  SETUP.md  (+104 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.reporting_cache/: data_df.pkl  template_file.pkl  template_structure.pkl
alembic/: env.py
alertmanager/: README.md  alertmanager.yml
config/: campaign_budgets.csv  reporting_config.json
data/: advanced_analysis_training_questions.json  advanced_strategic_questions.json  budget_pacing_template.xlsx  campaign_reporting_template.csv  campaigns.parquet  cm360_dataset.csv  cm360_training_questions.json  comprehensive_training_questions.json  dead_letter_queue.json  dv360_dataset.csv  dv360_training_questions.json  enhanced_sample.csv  funnel_revenue_dataset.csv  funnel_training_questions.json  google_ads_dataset.csv  google_ads_training_questions.json  historical_campaigns_sample.csv  insight_recommendation_questions.json  linkedin_ads_dataset.csv  linkedin_ads_training_questions.json  meta_ads_dataset.csv  meta_ads_training_questions.json  multi_platform_reporting_template.csv  refresh_metadata.json  sample_campaign_data.csv  sample_daily_campaigns.csv  sample_multi_campaign_database.csv  sample_multi_channel_overview.xlsx  (+9 more)
(+869 files in other folders)
