# PCA Agent - Python Project Configuration
# Unified configuration for all code quality tools

[project]
name = "pca-agent"
version = "3.0.0"
description = "Performance Campaign Analytics Agent - AI-Powered Marketing Analytics"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "node_modules", ".git"]
known_first_party = ["src"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E501", "W503", "E203"]
exclude = [".git", "__pycache__", ".venv", "node_modules", "build", "dist"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["tests/", ".venv/", "node_modules/"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules"]
skips = ["B101", "B104"]  # Skip assert and hardcoded binds

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", ".venv/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]
show_missing = true
fail_under = 60

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
exclude = [".venv", "node_modules", "__pycache__"]

[tool.ruff.isort]
known-first-party = ["src"]
